--- a/app/views/layouts/_cookie_banner.html.erb
+++ b/app/views/layouts/_cookie_banner.html.erb
@@ -7,7 +7,7 @@
 
         <div class="govuk-cookie-banner__content">
           <p>We use some essential cookies to make this service work.</p>
-          <p>We'd also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+          <p>We'd also like to use analytics cookies so we can understand how you use the service and make improvements to government services.</p>
         </div>
       </div>
     </div>
