--- a/app/views/steps/solicitor/contact_details/edit.html.erb
+++ b/app/views/steps/solicitor/contact_details/edit.html.erb
@@ -10,7 +10,13 @@
     </h1>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
-      <%= f.govuk_email_field :email %>
+      <%= f.govuk_radio_buttons_fieldset :email_provided, legend: { tag: 'span', size: 'm' } do %>
+        <%= f.govuk_radio_button :email_provided, GenericYesNo::YES, link_errors: true do %>
+          <%= f.govuk_email_field :email %>
+        <% end %>
+        <%= f.govuk_radio_button :email_provided, GenericYesNo::NO %>
+      <% end %>
+
 
       <%= f.govuk_phone_field :phone_number, width: 'one-half' %>
       <%= f.govuk_phone_field :fax_number, width: 'one-half' %>
