--- a/app/views/steps/applicant/contact_details/edit.html.erb
+++ b/app/views/steps/applicant/contact_details/edit.html.erb
@@ -8,7 +8,7 @@
     <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.full_name %></h1>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
-      <%= f.govuk_radio_buttons_fieldset :email_provided, legend: { tag: 'span', size: 'm' } do %>
+      <%= f.govuk_radio_buttons_fieldset :email_provided, legend: { text: '', tag: 'span', size: 'm' } do %>
          <%= f.govuk_radio_button :email_provided, GenericYesNo::YES, link_errors: true do %>
             <%= f.govuk_email_field :email %>
          <% end %>
