--- a/app/views/steps/shared/_relationship_step.html.erb
+++ b/app/views/steps/shared/_relationship_step.html.erb
@@ -6,6 +6,7 @@
     <%= f.govuk_radio_button :relation, Relation::FATHER %>
     <%= f.govuk_radio_button :relation, Relation::GUARDIAN %>
     <%= f.govuk_radio_button :relation, Relation::SPECIAL_GUARDIAN %>
+    <%= f.govuk_radio_button :relation, Relation::GRAND_PARENT %>
     <%= f.govuk_radio_button :relation, Relation::OTHER do %>
       <%= f.govuk_text_field :relation_other_value, label: { size: 's'} %>
     <% end %>
