RST-3432 address inset update
**JIRA**
[RST-3432](https://tools.hmcts.net/jira/browse/RST-3432)

--- a/app/views/steps/respondent/address_details/edit.html.erb
+++ b/app/views/steps/respondent/address_details/edit.html.erb
@@ -8,7 +8,7 @@
     <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.full_name %></h1>
 
     <div class="govuk-inset-text">
-      <%=t '.body_info' %>
+      <%=t '.body_info_html' %>
     </div>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
