--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -24,7 +24,8 @@
     </ul>
 
     <div class="govuk-inset-text app-inset-text--inverted app-inverted-narrow-width">
-      If you do not know all of the details you can still complete your application but it will take longer to process.
+      <p class="app-inverted-text">If you do not know all of the details you can still complete your application but it will take longer to process.</p>
+      <p class="app-inverted-text">If you are currently involved in Child Arrangements, Prohibited Steps or Specific Issue Order proceeding for the same child or children you can apply to the same court using the shorter form C2. Please make sure you state the case number when you submit the form.</p>
     </div>
 
     <div class="govuk-button-group govuk-!-margin-top-6">
