--- a/app/views/steps/respondent/address_details/edit.html.erb
+++ b/app/views/steps/respondent/address_details/edit.html.erb
@@ -25,9 +25,11 @@
       <%= f.govuk_radio_buttons_fieldset :residence_requirement_met, legend: { tag: 'span', size: 'm' } do %>
         <%= f.govuk_radio_button :residence_requirement_met, GenericYesNo::YES, link_errors: true %>
         <%= f.govuk_radio_button :residence_requirement_met, GenericYesNo::NO do %>
-          <%= f.govuk_text_area :residence_history %>
+          <%= f.govuk_text_area :residence_history_no %>
         <% end %>
-        <%= f.govuk_radio_button :residence_requirement_met, GenericYesNoUnknown::UNKNOWN %>
+        <%= f.govuk_radio_button :residence_requirement_met, GenericYesNoUnknown::UNKNOWN do %>
+          <%= f.govuk_text_area :residence_history_unknown %>
+        <% end %>
       <% end %>
       <%= f.continue_button %>
     <% end %>
