RST-3471 Complete your application page consent order guidance
**JIRA**
[RST-3471](https://tools.hmcts.net/jira/browse/RST-3471)

**Description**
Additional consent order guidance to page 'What you’ll need to complete your application'
No change to formatting of current content on page

--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -23,6 +23,12 @@
       </li>
     </ul>
 
+    <div class="govuk-grid-row ">
+      <div class="govuk-grid-column-full">
+        <p class="app-inverted-text">If you are applying for a consent order you must have a written agreement signed by you and the respondent for the court to formalise. You must email or send it to the court immediately after submitting your application. If the written agreement is not received the court cannot process your application.</p>
+      </div>
+    </div>
+
     <div class="govuk-inset-text app-inset-text--inverted app-inverted-narrow-width">
       <p class="app-inverted-text">If you do not know all of the details you can still complete your application but it will take longer to process.</p>
       <p class="app-inverted-text">If you are currently involved in Child Arrangements, Prohibited Steps or Specific Issue Order proceeding for the same child or children you can apply to the same court using the shorter form C2. Please make sure you state the case number when you submit the form.</p>
