--- a/app/views/layouts/_phase_banner.html.erb
+++ b/app/views/layouts/_phase_banner.html.erb
@@ -2,7 +2,10 @@
   <p class="govuk-phase-banner__content">
     <strong class="govuk-tag govuk-phase-banner__content__tag ">beta</strong>
     <span class="govuk-phase-banner__text">
-      <%= t('.feedback_contact_html') %>
+      <%= phase_banner_copy %>
     </span>
   </p>
 </div>
+
+
+
