--- a/app/views/steps/miam/acknowledgement/edit.en.html.erb
+++ b/app/views/steps/miam/acknowledgement/edit.en.html.erb
@@ -61,21 +61,23 @@
       You should have a document signed by the mediator confirming this. You need to bring this document to your first hearing.
     </p>
 
-    <h2 class="govuk-heading-l">
-      When you don’t have to attend a <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr>
-    </h2>
-
-    <p class="govuk-body">
-      You don’t have to attend a <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr> if you have a
-      valid reason. For example you or the children are at risk of harm.
-    </p>
-
-    <p class="govuk-body govuk-!-margin-bottom-8">
-      <a href="/about/miam_exemptions" class="govuk-link" target="_blank">List of valid reasons for not attending a
-        <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr></a>
-    </p>
-
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
+      <%= f.govuk_collection_radio_buttons :mediation_voucher_scheme, GenericYesNo.values, :value, nil, legend: { text: 'Have you previously been to mediation through the mediation voucher scheme?', size: 'm' } %>
+
+      <h2 class="govuk-heading-l">
+        When you don’t have to attend a <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr>
+      </h2>
+
+      <p class="govuk-body">
+        You don’t have to attend a <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr> if you have a
+        valid reason. For example you or the children are at risk of harm.
+      </p>
+
+      <p class="govuk-body govuk-!-margin-bottom-8">
+        <a href="/about/miam_exemptions" class="govuk-link" target="_blank">List of valid reasons for not attending a
+          <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr></a>
+      </p>
+
       <%=
         f.govuk_check_boxes_fieldset :miam_acknowledgement, multiple: false, legend: { tag: 'span', size: 's' } do
           f.govuk_check_box(:miam_acknowledgement, true, false, multiple: false, link_errors: true)
