--- a/app/views/steps/applicant/address_details/edit.html.erb
+++ b/app/views/steps/applicant/address_details/edit.html.erb
@@ -22,6 +22,13 @@
         <% end %>
       <% end %>
 
+      <%- if display_private_option? %>
+        <%= f.govuk_radio_buttons_fieldset :residence_keep_private, legend: { tag: 'span', size: 'm' } do %>
+          <%= f.govuk_radio_button :residence_keep_private, GenericYesNo::YES, link_errors: true %>
+          <%= f.govuk_radio_button :residence_keep_private, GenericYesNo::NO %>
+        <% end %>
+      <% end %>
+
       <%= f.continue_button %>
     <% end %>
   </div>
