--- a/app/views/steps/respondent/contact_details/edit.html.erb
+++ b/app/views/steps/respondent/contact_details/edit.html.erb
@@ -10,7 +10,13 @@
     <div class="govuk-inset-text"><p><%=t '.body_info' %></p></div>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
-      <%= f.govuk_email_field :email %>
+      <%= f.govuk_email_field :email,
+                              form_group: { classes: ['app-util--compact-form-group'] } %>
+      
+      <%= f.govuk_check_boxes_fieldset :email_unknown, multiple: false, small: true, legend: { tag: 'span', size: 's', hidden: true } do %>
+        <%= f.govuk_check_box :email_unknown, true, false, multiple: false %>
+      <% end %>
+
       <%= f.govuk_phone_field :home_phone, width: 'one-half' %>
       <%= f.govuk_phone_field :mobile_phone, width: 'one-half' %>
 
