--- a/app/views/steps/respondent/personal_details/edit.html.erb
+++ b/app/views/steps/respondent/personal_details/edit.html.erb
@@ -20,7 +20,12 @@
 
       <%= render partial: 'steps/shared/dob_form_element', locals: { form_object: f } %>
 
-      <%= f.govuk_text_field :birthplace, width: 'two-thirds', label: { size: 'm' } %>
+      <%= f.govuk_text_field :birthplace, width: 'two-thirds', label: { size: 'm' },
+                             form_group: { classes: ['app-util--compact-form-group'] } %>
+
+      <%= f.govuk_check_boxes_fieldset :birthplace_unknown, multiple: false, small: true, legend: { tag: 'span', size: 's', hidden: true } do %>
+        <%= f.govuk_check_box :birthplace_unknown, true, false, multiple: false %>
+      <% end %>
 
       <%= f.continue_button %>
     <% end %>
