--- a/app/views/steps/respondent/contact_details/edit.html.erb
+++ b/app/views/steps/respondent/contact_details/edit.html.erb
@@ -17,8 +17,17 @@
         <%= f.govuk_check_box :email_unknown, true, false, multiple: false %>
       <% end %>
 
-      <%= f.govuk_phone_field :home_phone, width: 'one-half' %>
-      <%= f.govuk_phone_field :mobile_phone, width: 'one-half' %>
+      <%= f.govuk_phone_field :home_phone, width: 'one-half',
+                              form_group: { classes: ['app-util--compact-form-group'] } %>
+      <%= f.govuk_check_boxes_fieldset :home_phone_unknown, multiple: false, small: true, legend: { tag: 'span', size: 's', hidden: true } do %>
+        <%= f.govuk_check_box :home_phone_unknown, true, false, multiple: false %>
+      <% end %>
+
+      <%= f.govuk_phone_field :mobile_phone, width: 'one-half',
+                              form_group: { classes: ['app-util--compact-form-group'] } %>
+      <%= f.govuk_check_boxes_fieldset :mobile_phone_unknown, multiple: false, small: true, legend: { tag: 'span', size: 's', hidden: true } do %>
+        <%= f.govuk_check_box :mobile_phone_unknown, true, false, multiple: false %>
+      <% end %>
 
       <%= f.continue_button %>
     <% end %>
