Add 'not known' to DOB field on PDF

--- a/app/views/steps/completion/shared/_date_row.pdf.erb
+++ b/app/views/steps/completion/shared/_date_row.pdf.erb
@@ -4,6 +4,8 @@
   </td>
 
   <td class="answer answer-value">
-    <%= l(date_row.value) %>
+    <%= date_row.value.present? ? l(date_row.value) : t("check_answers_html.#{date_row.question}.absence_answer") %>
+
+    <%#= l(date_row.value) %>
   </td>
 </tr>
