Remove autocomplete from child name form

--- a/app/views/steps/shared/_new_name.html.erb
+++ b/app/views/steps/shared/_new_name.html.erb
@@ -1,6 +1,6 @@
 <%= names_form.govuk_fieldset legend: { text: t('.fieldset_legend'), tag: 'span', size: 'm' } do %>
-  <%= names_form.govuk_text_field :new_first_name, width: 'one-half' %>
-  <%= names_form.govuk_text_field :new_last_name, width: 'one-half' %>
+  <%= names_form.govuk_text_field :new_first_name, width: 'one-half', autocomplete: 'off' %>
+  <%= names_form.govuk_text_field :new_last_name, width: 'one-half', autocomplete: 'off' %>
 
   <%= names_form.button button_text, type: :submit, value: :add_another_name,
                         class: %w(govuk-button govuk-button--secondary govuk-!-margin-bottom-8),
