After rake app update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,4 +53,4 @@
   <%= render partial: 'layouts/developer_tools' %>
 <% end %>
 
-<%= render file: 'layouts/govuk_template' %>
+<%= render template: 'layouts/govuk_template' %>
