--- a/app/views/steps/petition/orders/edit.html.erb
+++ b/app/views/steps/petition/orders/edit.html.erb
@@ -12,11 +12,11 @@
         <%= f.govuk_check_box :orders, PetitionOrder::CHILD_ARRANGEMENTS_TIME.to_s %>
 
         <%= f.govuk_check_box :orders, PetitionOrder::GROUP_PROHIBITED_STEPS.to_s do %>
-          <%= f.govuk_collection_check_boxes :orders_collection, PetitionOrder::PROHIBITED_STEPS, :to_s, :to_s %>
+          <%= f.govuk_collection_check_boxes :orders_collection, PetitionOrder::PROHIBITED_STEPS, :to_s, :to_s, legend: nil %>
         <% end %>
 
         <%= f.govuk_check_box :orders, PetitionOrder::GROUP_SPECIFIC_ISSUES.to_s do %>
-          <%= f.govuk_collection_check_boxes :orders_collection, PetitionOrder::SPECIFIC_ISSUES, :to_s, :to_s %>
+          <%= f.govuk_collection_check_boxes :orders_collection, PetitionOrder::SPECIFIC_ISSUES, :to_s, :to_s, legend: nil %>
         <% end %>
       <% end %>
 
