--- a/app/views/steps/shared/_dob_form_element.html.erb
+++ b/app/views/steps/shared/_dob_form_element.html.erb
@@ -5,7 +5,8 @@
 
   <%= form_object.govuk_check_boxes_fieldset :dob_unknown, multiple: false, small: true, legend: { tag: 'span', size: 's', hidden: true } do %>
     <%= form_object.govuk_check_box :dob_unknown, true, false, multiple: false do
-      form_object.govuk_text_field :age_estimate, width: 'one-half'
+      form_object.govuk_date_field :dob_estimate,
+        legend: { size: 's', text: 'Approximate date of birth', class: 'govuk-fieldset__legend govuk-fieldset__legend--s approx-dob-label' }
     end %>
   <% end %>
 
