--- a/app/views/steps/applicant/contact_details/edit.html.erb
+++ b/app/views/steps/applicant/contact_details/edit.html.erb
@@ -29,13 +29,20 @@
         <% end %>
       <% end %>
 
-      <%= f.govuk_phone_field :mobile_phone, width: 'one-half' %>
-
-      <%- if display_private_option? %>
-        <%= f.govuk_radio_buttons_fieldset :mobile_keep_private, legend: { tag: 'span', size: 'm' } do %>
-          <%= f.govuk_radio_button :mobile_keep_private, GenericYesNo::YES, link_errors: true %>
-          <%= f.govuk_radio_button :mobile_keep_private, GenericYesNo::NO %>
+      <%= f.govuk_radio_buttons_fieldset :mobile_provided, legend: nil do %>
+        <%= f.govuk_radio_button :mobile_provided, GenericYesNo::YES, link_errors: true do %>
+          <%= f.govuk_phone_field :mobile_phone, width: 'one-half' %>
+          <%- if display_private_option? %>
+            <%= f.govuk_radio_buttons_fieldset :mobile_keep_private, legend: { tag: 'span', size: 'm' } do %>
+              <%= f.govuk_radio_button :mobile_keep_private, GenericYesNo::YES, link_errors: true %>
+              <%= f.govuk_radio_button :mobile_keep_private, GenericYesNo::NO %>
+            <% end %>
+          <% end %>
         <% end %>
+        <%= f.govuk_radio_button :mobile_provided, GenericYesNo::NO do %>
+          <%= f.govuk_text_field :mobile_not_provided_reason, width: 'two-thirds' %>
+        <% end %>
+
       <% end %>
 
       <%= f.govuk_collection_radio_buttons :voicemail_consent, GenericYesNo.values, :value, nil, legend: { tag: 'span', size: 'm' } %>
