--- a/app/views/steps/children/names/edit.html.erb
+++ b/app/views/steps/children/names/edit.html.erb
@@ -1,4 +1,5 @@
 <% title t('.page_title') %>
+
 <% step_header %>
 
 <div class="govuk-grid-row">
@@ -24,3 +25,7 @@
     <% end %>
   </div>
 </div>
+
+<script type="text/javascript">
+window.addEventListener('unload', function(){}); // Does nothing but break the bfcache in Firefox and Safari
+</script>
