--- a/app/views/steps/alternatives/court/edit.en.html.erb
+++ b/app/views/steps/alternatives/court/edit.en.html.erb
@@ -57,14 +57,14 @@
     <p class="govuk-body">
       GOV.UK has more information on
       <a href="https://www.gov.uk/legal-aid/domestic-abuse-or-violence" class="govuk-link" rel="external" target="_blank">
-        legal aid and domestic violence or abuse</a>.
+        legal aid and domestic violence or abuse.</a>
     </p>
     <p class="govuk-body govuk-!-margin-bottom-8">
       Find out more about
       <a href="https://www.refuge.org.uk/get-help-now/help-for-women/recognising-abuse/" class="govuk-link" rel="external" target="_blank">
         domestic violence or abuse</a>
       and
-      <a href="https://www.nspcc.org.uk/preventing-abuse/child-abuse-and-neglect/" class="govuk-link" rel="external" target="_blank">child abuse</a>.
+      <a href="https://www.nspcc.org.uk/preventing-abuse/child-abuse-and-neglect/" class="govuk-link" rel="external" target="_blank">child abuse.</a>
     </p>
   </div>
 
