--- a/app/views/steps/alternatives/court/edit.en.html.erb
+++ b/app/views/steps/alternatives/court/edit.en.html.erb
@@ -83,7 +83,7 @@
       <ul class="govuk-list app-list--pros-cons">
         <li class="app-list--item--cons">can be expensive</li>
         <li class="app-list--item--cons">court process can take a long time</li>
-        <li class="app-list--item--cons">you may not feel in a control - a judge makes the decision</li>
+        <li class="app-list--item--cons">you may not feel in control - a judge makes the decision</li>
         <li class="app-list--item--cons">can be more stressful for you and the children</li>
         <li class="app-list--item--cons">may increase conflict between you and the other person</li>
       </ul>
