RST-4491 Redirect enquiries to single email address
Changed emails and text from c100helpdesk@digital.justice.gov.uk to C100applications@justice.gov.uk

--- a/app/views/about/accessibility.en.html.erb
+++ b/app/views/about/accessibility.en.html.erb
@@ -57,7 +57,7 @@
     <p class="govuk-body">
       If you need information on this online service in a different format like an accessible PDF, large print, easy
       read, audio recording or braille, email
-      <a href="mailto:c100helpdesk@digital.justice.gov.uk?subject=Accessibility" class="govuk-link ga-clickAction" data-ga-category="accessibility" data-ga-action="click" data-ga-label="mailto helpdesk">c100helpdesk@digital.justice.gov.uk</a>.
+      <a href="mailto:C100applications@justice.gov.uk?subject=Accessibility" class="govuk-link ga-clickAction" data-ga-category="accessibility" data-ga-action="click" data-ga-label="mailto helpdesk">C100applications@justice.gov.uk</a>.
     </p>
 
     <h2 class="govuk-heading-l">Technical information about accessibility for this online service</h2>
@@ -112,7 +112,7 @@
     <p class="govuk-body">
       We’re always looking to improve the accessibility of this online service. If you find any problems not listed on
       this page or you think we’re not meeting accessibility requirements, contact
-      <a href="mailto:c100helpdesk@digital.justice.gov.uk?subject=Accessibility" class="govuk-link ga-clickAction" data-ga-category="accessibility" data-ga-action="click" data-ga-label="mailto helpdesk">c100helpdesk@digital.justice.gov.uk</a>.
+      <a href="mailto:C100applications@justice.gov.uk?subject=Accessibility" class="govuk-link ga-clickAction" data-ga-category="accessibility" data-ga-action="click" data-ga-label="mailto helpdesk">C100applications@justice.gov.uk</a>.
     </p>
 
     <h2 class="govuk-heading-l">Enforcement procedure</h2>
