--- a/app/views/about/contact.en.html.erb
+++ b/app/views/about/contact.en.html.erb
@@ -10,7 +10,7 @@
     </p>
 
     <p class="govuk-body-l">
-      <a href="mailto:c100helpdesk@digital.justice.gov.uk?subject=Feedback" class="govuk-link ga-clickAction" data-ga-category="feedback" data-ga-action="click" data-ga-label="report a problem">c100helpdesk@digital.justice.gov.uk</a>
+      <a href="mailto:C100applications@justice.gov.uk?subject=Feedback" class="govuk-link ga-clickAction" data-ga-category="feedback" data-ga-action="click" data-ga-label="report a problem">C100applications@justice.gov.uk</a>
     </p>
 
     <p class="govuk-body">This email address should only be used for feedback on the digital service.</p>
