--- a/app/views/steps/applicant/privacy_preferences/edit.html.erb
+++ b/app/views/steps/applicant/privacy_preferences/edit.html.erb
@@ -5,14 +5,13 @@
   <div class="govuk-grid-column-two-thirds">
     <%= govuk_error_summary %>
 
-    <span class="govuk-caption-xl"><%=t '.section' %></span>
     <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
 
     <%=t '.lead_text_html' %>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_radio_buttons_fieldset :are_contact_details_private, legend: { tag: 'span', size: 's' } do %>
-        <%= f.govuk_radio_button :are_contact_details_private, GenericYesNo::YES, link_errors: true do %>
+        <%= f.govuk_radio_button :are_contact_details_private, GenericYesNo::YES, link_errors: true, selected: true do %>
           <%= f.govuk_check_boxes_fieldset :contact_details_private, legend: { tag: 'span', size: 's' } do %>
             <%= f.govuk_check_box :contact_details_private, ContactDetails::ADDRESS.to_s %>
             <%= f.govuk_check_box :contact_details_private, ContactDetails::EMAIL.to_s %>
