Add CYA and PDF

--- a/app/assets/stylesheets/local/pdf_summary.scss
+++ b/app/assets/stylesheets/local/pdf_summary.scss
@@ -247,4 +247,9 @@ body:not(.status-completed) {
       border-bottom: none;
     }
   }
+
+  .contact-details-privacy-response{
+    background-color: red;
+    display: inline-block;
+  }
 }
