--- a/app/views/steps/applicant/privacy_known/edit.html.erb
+++ b/app/views/steps/applicant/privacy_known/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="govuk-grid-column-two-thirds">
     <%= govuk_error_summary %>
 
-    <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
+    <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.full_name %></h1>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_collection_radio_buttons :privacy_known, GenericYesNoUnknown.values, :value, nil, legend: { tag: 'span', size: 's' } %>
