--- a/app/views/steps/applicant/privacy_preferences/edit.html.erb
+++ b/app/views/steps/applicant/privacy_preferences/edit.html.erb
@@ -7,7 +7,7 @@
 
     <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.full_name %></h1>
 
-    <%=t '.lead_text_html', name: @form_object.record.full_name %>
+    <%=t '.lead_text_html' %>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_radio_buttons_fieldset :are_contact_details_private, legend: { tag: 'span', size: 's' } do %>
