Add wording change

--- a/app/views/steps/applicant/privacy_summary/show.html.erb
+++ b/app/views/steps/applicant/privacy_summary/show.html.erb
@@ -20,7 +20,7 @@
     <% else %>
       <h1 class="govuk-heading-xl"><%=t '.heading_not_private', name: @current_record.full_name %></h1>
 
-      <%=t '.body_text_not_private_html', name: @current_record.full_name %>
+      <%=t '.body_text_not_private_html' %>
       <br>
     <% end %>
 
