--- a/app/views/steps/applicant/privacy_preferences/edit.html.erb
+++ b/app/views/steps/applicant/privacy_preferences/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="govuk-grid-column-two-thirds">
     <%= govuk_error_summary %>
 
-    <h1 class="govuk-heading-xl"><%=t '.heading', name: @form_object.record.full_name %></h1>
+    <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
 
     <%=t '.lead_text_html' %>
 
