--- a/app/views/steps/miam_exemptions/exit_page/show.en.html.erb
+++ b/app/views/steps/miam_exemptions/exit_page/show.en.html.erb
@@ -22,7 +22,7 @@
           </div>
           <input type="submit" name="commit" value="Find a mediator" class="govuk-button govuk-!-margin-bottom-1 ga-clickAction" formnovalidate="formnovalidate"
                  data-module="govuk-button" data-ga-category="miam kickout" data-ga-action="submit" data-ga-label="fmc postcode"
-                 data-prevent-double-click="true" data-disable-with="Find a mediator"/>
+                 data-prevent-double-click="true"/>
         </form>
       </li>
       <li>Book initial meeting with mediator</li>
