--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -24,4 +24,4 @@
   <% render partial: 'layouts/footer_links' %>
 <% end %>
 
-<%= render file: 'layouts/govuk_template' %>
+<%= render template: 'layouts/govuk_template' %>
