--- a/app/views/steps/application/check_your_answers/_fulfilment_errors.html.erb
+++ b/app/views/steps/application/check_your_answers/_fulfilment_errors.html.erb
@@ -1,7 +1,7 @@
 <a id="steps-application-declaration-form-c100-application-field-error"></a>
 
 <div id="cya-fulfilment-errors" class="govuk-form-group govuk-form-group--error govuk-!-margin-top-8">
-  <span class="govuk-error-message"><%=t '.heading' %></span>
+  <p class="govuk-error-message"><%=t '.heading' %></p>
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
