--- a/app/views/backoffice/shared/_menu.en.html.erb
+++ b/app/views/backoffice/shared/_menu.en.html.erb
@@ -1,7 +1,7 @@
 <% if admin_signed_in? %>
-  <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide Top Level Navigation">Menu</button>
-  <nav>
-    <ul id="navigation" class="govuk-header__navigation" aria-label="Top Level Navigation">
+  <nav class="govuk-header__navigation" aria-label="Top Level Navigation">
+    <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide Top Level Navigation">Menu</button>
+    <ul id="navigation" class="govuk-header__navigation-list">
       <li class="govuk-header__navigation-item <%= 'govuk-header__navigation-item--active' if current_page?(backoffice_dashboard_index_path) %>">
         <%= link_to 'Applications', backoffice_dashboard_index_path, class: 'govuk-header__link' %>
       </li>
