--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -16,6 +16,7 @@
       <li>details of any previous family court cases</li>
       <li>signed document confirming <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr> attendance (if applicable)</li>
       <li>written agreement for the court to formalise if you are applying for a consent order</li>
+      <li>a scan, photo or electronic copy of your draft consent order if you are applying for a consent order</li>
       <li>completed and signed
         <a href="https://www.gov.uk/government/publications/form-fp9-certificate-of-suitability-of-litigation-friend" class="govuk-link app-link--inverted" target="_blank" rel="external">certificate
           of suitability</a> or copy of the court order appointing a ‘litigation friend’ if any of the people making
