--- a/app/views/steps/shared/document_upload/_document_upload_field.html.erb
+++ b/app/views/steps/shared/document_upload/_document_upload_field.html.erb
@@ -10,7 +10,9 @@
 
 <div class="govuk-grid-row uploader-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form.govuk_file_field(field_name, label: { text: t('shared.file_upload.select_file') }, class: 'govuk-file-upload single-file-upload', accept: DocumentUpload::ALLOWED_CONTENT_TYPES.join(','), src: 'camera') %>
+    <%= form.govuk_file_field(field_name, label: { text: t('shared.file_upload.select_file') }, class: 'govuk-file-upload single-file-upload', accept: DocumentUpload::ALLOWED_CONTENT_TYPES.join(','), src: 'camera',
+      onchange: "validateFiles(this);",
+      data: { max_file_size: 20.megabytes }) %>
   </div>
 </div>
 
