--- a/app/views/about/privacy.en.html.erb
+++ b/app/views/about/privacy.en.html.erb
@@ -174,7 +174,7 @@
     </p>
 
     <p class="govuk-body">
-      <a href="https://https://www.gov.uk/government/publications/record-retention-and-disposition-schedules"
+      <a href="https://www.gov.uk/government/publications/record-retention-and-disposition-schedules"
          class="govuk-link" rel="external" target="_blank">
         https://www.gov.uk/government/publications/record-retention-and-disposition-schedules</a></p>
 
