--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -15,6 +15,10 @@
       <li>solicitor details (if you have asked one to represent you)</li>
       <li>details of any previous family court cases</li>
       <li>signed document confirming <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr> attendance (if applicable)</li>
+      <li>a scan, photo or electronic copy of the document confirming MIAM attendance or mediator’s exemption if you are
+          applying for a child arrangements order, prohibited steps order, specific issue order, or to change or end an
+          existing order (if applicable)
+      </li>
       <li>written agreement for the court to formalise if you are applying for a consent order</li>
       <li>a scan, photo or electronic copy of your draft consent order if you are applying for a consent order</li>
       <li>completed and signed
