--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -19,7 +19,8 @@
           applying for a child arrangements order, prohibited steps order, specific issue order, or to change or end an
           existing order (if applicable)
       </li>
-      <li>written agreement for the court to formalise if you are applying for a consent order</li>
+      <li>written agreement signed by both parties for the court to formalise if you are applying for a consent order
+      </li>
       <li>a scan, photo or electronic copy of your draft consent order if you are applying for a consent order</li>
       <li>completed and signed
         <a href="https://www.gov.uk/government/publications/form-fp9-certificate-of-suitability-of-litigation-friend" class="govuk-link app-link--inverted" target="_blank" rel="external">certificate
