--- a/app/views/steps/solicitor/address_details/edit.html.erb
+++ b/app/views/steps/solicitor/address_details/edit.html.erb
@@ -15,7 +15,8 @@
       <%= f.govuk_text_field :address_line_3, label: { hidden: true } %>
       <%= f.govuk_text_field :town, width: 'one-half' %>
       <%= f.govuk_text_field :country, width: 'one-half' %>
-      <%= f.govuk_text_field :postcode, width: 'one-third' %>
+      <%= f.govuk_text_field :postcode, width: 'one-third',
+                             hint: { text: t('dictionary.PERSONAL_ADDRESS_FIELDS.postcode_hint') } %>
 
       <%= f.continue_button %>
     <% end %>
