--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -1,5 +1,5 @@
 <% title 'What is required' %>
-<% step_header(path: Rails.configuration.gds_service_homepage_url) %>
+<% step_header(path: root_path) %>
 
 <div class="govuk-grid-row app-inverted--card app-inverted-text">
   <div class="govuk-grid-column-full">
@@ -42,7 +42,7 @@
     </div>
 
     <div class="govuk-button-group govuk-!-margin-top-6">
-      <%= link_button 'Continue', edit_steps_opening_start_or_continue_path, class: 'app-button--l app-button--inverted' %>
+      <%= link_button 'Continue', edit_steps_opening_consent_order_path, class: 'app-button--l app-button--inverted' %>
 
       <%= link_to 'Or return to a saved application', new_user_session_path,
                   class: 'govuk-link app-link--inverted ga-pageLink',
