--- a/app/views/errors/application_screening.html.erb
+++ b/app/views/errors/application_screening.html.erb
@@ -6,6 +6,7 @@
 
     <p class="govuk-body-l"><%=t '.lead_text' %></p>
 
-    <%= link_button t('.enter_postcode'), edit_steps_opening_start_or_continue_path %>
+    <%#= link_button t('.enter_postcode'), edit_steps_opening_start_or_continue_path %>
+    <%= link_button t('.enter_postcode'), edit_steps_opening_postcode_path %>
   </div>
 </div>
