--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -7,6 +7,8 @@
     <span class="govuk-caption-xl app-inverted-text">Before you continue</span>
     <h1 class="govuk-heading-xl app-inverted-text">What you’ll need to complete your application</h1>
 
+    <p class="app-inverted-text">You will need to pay the court fee of £232 by <strong>credit or debit card</strong> before the court can process your application. You may be able to <a href="https://www.gov.uk/get-help-with-court-fees" class="govuk-link app-link--inverted" target="_blank" rel="external">get help paying</a> if you are on a low income, receive certain benefits or have little or no savings. If you do qualify, you'll need to provide your reference number. This will be in the format: HWF-XXX-XXX</p>
+
     <p class="govuk-body app-inverted-text">You will need the following:</p>
 
     <ul class="govuk-list govuk-list--bullet app-inverted-text app-inverted-narrow-width">
@@ -33,7 +35,6 @@
     <div class="govuk-grid-row ">
       <div class="govuk-grid-column-full">
         <p class="app-inverted-text">If you are applying for a consent order you must have a written agreement signed by you and the respondent for the court to formalise.</p>
-        <p class="app-inverted-text">You will need to pay the court fee of £232 before the court can process your application. You may be able to <a href="https://www.gov.uk/get-help-with-court-fees" class="govuk-link app-link--inverted" target="_blank" rel="external">get help paying</a> if you are on a low income, receive certain benefits or have little or no savings. If you do qualify, you'll need to provide your reference number. This will be in the format: HWF-XXX-XXX</p>
       </div>
     </div>
 
