RST-5440 Content change

--- a/app/views/steps/shared/_court_documents.en.html.erb
+++ b/app/views/steps/shared/_court_documents.en.html.erb
@@ -1,7 +1,7 @@
 <h2 class="govuk-heading-l">If you’re sending documents</h2>
 
 <p class="govuk-body">
-  Remember to include your application reference code. Send documents (and cheque if that’s how you choose to pay) to:
+  Remember to include your application reference code. Send documents to:
 </p>
 
 <p class="govuk-body">
