--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -35,6 +35,7 @@
     <div class="govuk-grid-row ">
       <div class="govuk-grid-column-full">
         <p class="app-inverted-text">If you are applying for a consent order you must have a written agreement signed by you and the respondent for the court to formalise.</p>
+        <p>test test</p>
       </div>
     </div>
 
