--- a/app/views/steps/opening/error_but_continue/show.html.erb
+++ b/app/views/steps/opening/error_but_continue/show.html.erb
@@ -6,6 +6,9 @@
     <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
 
     <p class="govuk-body-l">
+      <%= @courtfinder_output %>
+    </p>
+    <p class="govuk-body-l">      
       <%- if @courtfinder_ok %>
         <%= t '.lead_text.courtfinder_ok' %>
       <%- else %>
