--- a/app/views/steps/application/check_your_answers/_fulfilment_errors.html.erb
+++ b/app/views/steps/application/check_your_answers/_fulfilment_errors.html.erb
@@ -12,10 +12,13 @@
       </ul>
     </div>
 
+  <% errors.each do |error| %>
     <div class="govuk-grid-column-one-third">
-      <%# We only show the link in the first error, in case there are more than one %>
-      <%= link_to t('.change_link'), errors.first.change_path, class: 'govuk-link govuk-link--no-visited-state ga-pageLink govuk-body-m',
-                  data: { ga_category: 'check your answers', ga_label: "fulfilment error: #{errors.first.attribute}" } %>
+        <%= link_to t('.change_link'), error.change_path, class: 'govuk-link govuk-link--no-visited-state ga-pageLink govuk-body-m',
+                    data: { ga_category: 'check your answers', ga_label: "fulfilment error: #{error.attribute}" } %>
     </div>
+  <% end %>
+
+
   </div>
 </div>
