--- a/app/views/steps/address/results/_no_results.en.html.erb
+++ b/app/views/steps/address/results/_no_results.en.html.erb
@@ -1,3 +1,7 @@
+<p>
+  <%= @errors %>
+</p>
+
 <p class="govuk-body-l">
   <% if successful_lookup %>
     Although the postcode you entered looks like it’s in the right format, no addresses were found. This can happen
