RST-5654 Content change for HWF down

--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -5,6 +5,7 @@
 
 <div class="govuk-grid-row app-inverted--card app-inverted-text">
   <div class="govuk-grid-column-full">
+    <span class="govuk-caption-xl app-inverted-text"><strong>The Help with Fees online service is temporarily unavailable. If you wish to submit a C100 application supported by a Help With Fees application you will need to use the paper form</strong>.</span>
     <span class="govuk-caption-xl app-inverted-text">Before you continue</span>
     <h1 class="govuk-heading-xl app-inverted-text">What you’ll need to complete your application</h1>
 
