RST-6283 mediation content changes

--- a/app/views/steps/miam/acknowledgement/edit.en.html.erb
+++ b/app/views/steps/miam/acknowledgement/edit.en.html.erb
@@ -17,8 +17,11 @@
       A <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr> is an initial meeting where you'll be
       given information about
       <a href="https://helpwithchildarrangements.service.justice.gov.uk/professional-mediation" class="govuk-link" rel="external" target="_blank">mediation</a>
-      and alternative ways of reaching an agreement without going to court. A mediator will consider with you whether
-      these other ways are suitable in your case.
+      and other kinds of non-court dispute resolution. A mediator will explore whether these other options are suitable in your case.
+    </p>
+
+    <p class="govuk-body">
+      Non court dispute resolution, or NCDR, means methods of resolving a dispute other than through the court process, including but not limited to mediation, arbitration, evaluation by a neutral third party (such as a private Financial Dispute Resolution process) and collaborative law.
     </p>
 
     <p class="govuk-body">
@@ -58,7 +61,7 @@
     </h2>
 
     <p class="govuk-body">
-      You should have a document signed by the mediator confirming this. You need to bring this document to your first hearing.
+      You should have a document signed by the mediator confirming this. You need to submit a copy of this document with this application to court.
     </p>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
