--- a/app/views/steps/miam_exemptions/exit_page/show.en.html.erb
+++ b/app/views/steps/miam_exemptions/exit_page/show.en.html.erb
@@ -6,7 +6,7 @@
     <h1 class="govuk-heading-xl">You must attend a MIAM</h1>
 
     <p class="govuk-body-l">
-      You have not provided a valid reason for not attending a MIAM. You’re legally required to attend one if you want to
+      You have not provided a valid reason for not attending a MIAM or another form of NCDR. You’re legally required to attend one if you want to
       go to court to resolve a dispute involving the children.
     </p>
 
