--- a/app/views/about/miam_exemptions.en.html.erb
+++ b/app/views/about/miam_exemptions.en.html.erb
@@ -5,13 +5,13 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-xl">Valid reasons not to attend a MIAM</h1>
 
-    <p class="govuk-body">If you think you’re exempt from attending a MIAM, you must be prepared to explain your reasons to the court and
-      you may be asked to provide evidence at the hearing.
+    <p class="govuk-body">A MIAM is not mediation. It is an initial meeting where an authorised family mediator will consider
+      with you (and the other party if present) whether family mediation, or another form of non-court dispute resolution,
+      would be a more appropriate way for you to resolve the dispute. The mediator will also be able to signpost you to other help and support services.
     </p>
 
-    <p class="govuk-body">A MIAM is not mediation. It is an initial meeting that explains mediation and alternative ways of reaching an
-      agreement without going to court. A mediator considers with you whether these other ways are suitable in your
-      case.
+    <p class="govuk-body">If you think you’re exempt from attending a MIAM, you must be prepared to explain your reasons to the court.
+      Where evidence is required, you need to submit a copy of this document with this application to court.
     </p>
 
     <p class="govuk-body">You do not have to attend a MIAM if:</p>
@@ -23,11 +23,11 @@
       <li>any of the following circumstances apply:</li>
     </ul>
 
-    <h2 class="govuk-heading-l">You have evidence of domestic abuse and violence</h2>
+    <h2 class="govuk-heading-l">You have evidence of domestic abuse</h2>
 
     <p class="govuk-body">
       <a href="https://www.gov.uk/government/collections/sample-letters-to-get-evidence-of-domestic-violence" class="govuk-link" rel="external" target="_blank">Sample
-        letters to get evidence of domestic violence</a>
+        letters to get evidence of domestic abuse</a>
     </p>
 
     <h3 class="govuk-heading-m">The police have been involved</h3>
@@ -43,17 +43,17 @@
       </summary>
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
-          <li>evidence that a prospective party has been arrested for a relevant domestic violence offence</li>
-          <li>evidence of a relevant police caution for a domestic violence offence</li>
-          <li>evidence of relevant criminal proceedings for a domestic violence offence which have not concluded</li>
-          <li>evidence of a relevant conviction for a domestic violence offence</li>
+          <li>Evidence that a prospective party has been arrested for a relevant domestic abuse offence</li>
+          <li>Evidence of a relevant police caution for a domestic abuse offence</li>
+          <li>Evidence of relevant criminal proceedings for a domestic abuse offence which have not concluded</li>
+          <li>Evidence of a relevant conviction for a domestic abuse offence</li>
           <li>a domestic violence protection notice issued under section 24 of the Crime and Security Act 2010 against a prospective party</li>
         </ul>
       </div>
     </details>
 
     <h3 class="govuk-heading-m">A court has already been involved</h3>
-    <p class="govuk-body">For example, a court has made an order relating to you, the other people in this application (the respondents) or somebody close to you or them in connection with domestic violence or abuse.</p>
+    <p class="govuk-body">For example, a court has made an order relating to the prospective applicant, the other people in this application (the respondents) or somebody close to you or them in connection with domestic abuse.</p>
 
     <details class="govuk-details" data-module="govuk-details">
       <summary class="govuk-details__summary">
@@ -63,20 +63,20 @@
       </summary>
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
-          <li>a court order binding a prospective party over in connection with a domestic violence offence</li>
+          <li>A court order binding a prospective party over in connection with a domestic abuse offence</li>
           <li>a relevant protective injunction</li>
-          <li>an undertaking given in England and Wales under section 46 or 63E of the Family Law Act 1996 (or given in Scotland or Northern Ireland in place of a protective injunction) by a prospective party, provided that a cross-undertaking relating to domestic violence was not given by another prospective party</li>
-          <li>a copy of a finding of fact, made in proceedings in the UK, that there has been domestic violence by a prospective party</li>
-          <li>an expert report produced as evidence in proceedings in the UK for the benefit of a court or tribunal confirming that a person with whom a prospective party is or was in a family relationship, was assessed as being, or at risk of being, a victim of domestic violence by that prospective party</li>
+          <li>An undertaking given in England and Wales under section 46 or 63E of the Family Law Act 1996 (or given in Scotland or Northern Ireland in place of a protective injunction) by a prospective party, provided that a cross-undertaking relating to domestic violence or abuse was not given by another prospective party</li>
+          <li>A copy of a finding of fact, made in proceedings in the UK, that there has been domestic abuse by a prospective party</li>
+          <li>An expert report produced as evidence in proceedings in the UK for the benefit of a court or tribunal confirming that a person with whom a prospective party is or was personally connected, was assessed as being, or at risk of being, a victim of domestic abuse by that prospective party</li>
         </ul>
       </div>
     </details>
 
     <h3 class="govuk-heading-m">
-     A letter confirms you or the other people in this application (the respondents) are or have been a victim of domestic violence or abuse
+     A letter confirms the prospective applicant or the other people in this application (the respondents) are or have been a victim of domestic abuse
     </h3>
     <p class="govuk-body">
-      For example, a health professional or specialist has confirmed injuries that are or were a result of domestic violence or abuse.
+      For example, a health professional or specialist has confirmed injuries that are or were a result of domestic abuse.
     </p>
 
     <details class="govuk-details" data-module="govuk-details">
@@ -88,7 +88,7 @@
           <li>a letter or report from an appropriate health professional confirming that:
             <ol class="govuk-list app-list--lower-roman">
               <li>that professional, or another appropriate health professional, has examined a prospective party in person; and</li>
-              <li>in the reasonable professional judgment of the author or the examining appropriate health professional, that prospective party has, or has had, injuries or a condition consistent with being a victim of domestic violence</li>
+              <li>in the reasonable professional judgment of the author or the examining appropriate health professional, that prospective party has, or has had, injuries or a condition consistent with being a victim of domestic abuse</li>
             </ol>
           </li>
           <li>a letter or report from:
@@ -116,21 +116,21 @@
       </summary>
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
-          <li>a letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is in a family relationship, is or has been at risk of harm from domestic violence by another prospective party</li>
+          <li>A letter from any person who is a member of a multi-agency risk assessment conference (or other suitable local safeguarding forum) confirming that a prospective party, or a person with whom that prospective party is personally connected, is or has been at risk of harm from domestic abuse by another prospective party</li>
           <li>a letter from an officer employed by a local authority or housing association (or their equivalent in Scotland or Northern Ireland) for the purpose of supporting tenants containing:
             <ol class="govuk-list app-list--lower-roman">
-              <li>a statement to the effect that, in their reasonable professional judgment, a person with whom a prospective party is or has been in a family relationship is, or is at risk of being, a victim of domestic violence by that prospective party</li>
+              <li>a statement to the effect that, in their reasonable professional judgment, a person with whom a prospective party is or has been personally connected is, or is at risk of being, a victim of domestic abuse by that prospective party</li>
               <li>a description of the specific matters relied upon to support that judgment; and</li>
-              <li>a description of the support they provided to the victim of domestic violence or the person at risk of domestic violence by that prospective party</li>
+              <li>a description of the support they provided to the victim of domestic abuse or the person at risk of domestic abuse by that prospective party</li>
             </ol>
           </li>
-          <li>a letter from a public authority confirming that a person with whom a prospective party is or was in a family relationship, was assessed as being, or at risk of being, a victim of domestic violence by that prospective party (or a copy of that assessment)</li>
+          <li>A letter from a public authority confirming that a person with whom a prospective party is or was personally connected, was assessed as being, or at risk of being, a victim of domestic abuse by that prospective party (or a copy of that assessment)</li>
         </ul>
       </div>
     </details>
 
     <h3 class="govuk-heading-m">
-      You have a letter from a domestic violence or abuse support service, specialist or organisation
+      The prospective applicant has a letter from a domestic abuse support service, specialist or organisation
     </h3>
     <p class="govuk-body">
       For example, an independent domestic violence or abuse adviser has confirmed they are providing support to you or the other people in this application (the respondents)
@@ -142,23 +142,23 @@
       </summary>
       <div class="govuk-details__text">
         <ul class="govuk-list govuk-list--bullet">
-          <li>a letter from an independent domestic violence advisor confirming that they are providing support to a prospective party</li>
-          <li>a letter from an independent sexual violence advisor confirming that they are providing support to a prospective party relating to sexual violence by another prospective party</li>
+          <li>A letter from an independent domestic violence advisor (IDVA) confirming that they are providing or have provided support to a prospective party</li>
+          <li>A letter from an independent sexual violence advisor (ISVA) confirming that they are providing or have provided support to a prospective party relating to sexual violence by another prospective party</li>
           <li>
             a letter which:
             <p class="govuk-body govuk-!-margin-top-3">
               (i) is from an organisation providing domestic violence support services, or a registered charity, which letter confirms that it:
             </p>
             <ol class="govuk-list app-list--lower-alpha">
-              <li>is situated in England and Wales</li>
+              <li>is situated in the United Kingdom</li>
               <li>has been operating for an uninterrupted period of six months or more; and</li>
-              <li>provided a prospective party with support in relation to that person’s needs as a victim, or a person at risk, of domestic violence; and</li>
+              <li>provided a prospective party with support in relation to that person’s needs as a victim, or a person at risk, of domestic abuse; and</li>
             </ol>
             <p class="govuk-body">
               (ii) contains:
             </p>
             <ol class="govuk-list app-list--lower-alpha">
-              <li>a statement to the effect that, in the reasonable professional judgment of the author of the letter, the prospective party is, or is at risk of being, a victim of domestic violence</li>
+              <li>a statement to the effect that, in the reasonable professional judgment of the author of the letter, the prospective party is, or is at risk of being, a victim of domestic abuse</li>
               <li>a description of the specific matters relied upon to support that judgment</li>
               <li>a description of the support provided to the prospective party; and</li>
               <li>a statement of the reasons why the prospective party needed that support</li>
@@ -167,9 +167,9 @@
           <li>
             a letter or report from an organisation providing domestic violence support services in the UK confirming:
             <ol class="govuk-list app-list--lower-roman">
-              <li>that a person with whom a prospective party is or was in a family relationship was refused admission to a refuge</li>
+              <li>that a person with whom a prospective party is or was personally connected was refused admission to a refuge</li>
               <li>the date on which they were refused admission to the refuge; and</li>
-              <li>they sought admission to the refuge because of allegations of domestic violence by the prospective party referred to in paragraph (i)</li>
+              <li>they sought admission to the refuge because of allegations of domestic abuse by the prospective party referred to in paragraph (i)</li>
             </ol>
           </li>
         </ul>
@@ -195,7 +195,7 @@
     </details>
 
     <h3 class="govuk-heading-m">
-      You have evidence that you or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
+      You have evidence that the prospective applicant or the other people in this application (the respondents) have been, or are at risk of being, financially abused by the other
     </h3>
     <p class="govuk-body">
       Financial abuse is a way of controlling someone being able to earn, spend or keep their own money. For example, preventing someone from going to work, withholding money, or putting debts in someone else’s name.
@@ -205,7 +205,7 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>a copy of a credit card account, loan document or bank statements</li>
-      <li>a letter from a domestic violence support organisation</li>
+      <li>a letter from a domestic abuse support organisation</li>
       <li>emails, text messages or a diary kept by the victim</li>
     </ul>
 
@@ -238,7 +238,7 @@
         </ul>
         <p class="govuk-body">Any delay caused by attending a MIAM would cause:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>unreasonable hardship for you</li>
+          <li>significant financial hardship to the prospective applicant</li>
           <li>a risk of harm to the children</li>
           <li>a risk of unlawful removal of a child from the UK, or a risk of unlawful retention of a child who is currently outside England and Wales</li>
           <li>a significant risk of a miscarriage of justice</li>
@@ -270,13 +270,6 @@
     </p>
 
     <h2 class="govuk-heading-l">Any other exemptions</h2>
-
-    <h3 class="govuk-heading-m">
-      You don’t have sufficient contact details for the other people in this application (the respondents)
-    </h3>
-    <p class="govuk-body">
-      The other people can't be contacted to arrange a MIAM.
-    </p>
 
     <h3 class="govuk-heading-m">
       You’re applying for a without notice hearing
