--- a/app/views/steps/abuse_concerns/applicant_info/show.en.html.erb
+++ b/app/views/steps/abuse_concerns/applicant_info/show.en.html.erb
@@ -7,7 +7,7 @@
     <h1 class="govuk-heading-xl">Your safety</h1>
 
     <p class="govuk-body">
-      The court needs to know if you have suffered, or are at risk of suffering, any form of domestic violence or abuse.
+      The court needs to know if you have suffered, or are at risk of suffering, any form of domestic abuse.
     </p>
 
     <p class="govuk-body">
@@ -15,8 +15,9 @@
     </p>
 
     <p class="govuk-body">
-      <a href="https://www.refuge.org.uk/get-help-now/help-for-women/recognising-abuse/" class="govuk-link" rel="external" target="_blank">Find
-        out about the signs of domestic violence or abuse</a>
+      <a href="https://refuge.org.uk/" class="govuk-link" rel="external" target="_blank">
+        Find out about the signs of domestic abuse
+      </a>
     </p>
 
     <%= link_button 'Continue', edit_steps_abuse_concerns_question_path(subject: AbuseSubject::APPLICANT) %>
