--- a/app/views/steps/alternatives/court/edit.en.html.erb
+++ b/app/views/steps/alternatives/court/edit.en.html.erb
@@ -49,7 +49,7 @@
         how to represent yourself in court</a>
       before you apply.
     </span>
-    <h2 class="govuk-heading-l margin-top-20">Domestic violence or abuse and child abuse</h2>
+    <h2 class="govuk-heading-l margin-top-20">Domestic abuse and child abuse</h2>
     <p class="govuk-body">
       You might be able to get legal aid if you have
       evidence that you or the children have been victims of abuse.
@@ -57,12 +57,12 @@
     <p class="govuk-body">
       GOV.UK has more information on
       <a href="https://www.gov.uk/legal-aid/domestic-abuse-or-violence" class="govuk-link" rel="external" target="_blank">
-        legal aid and domestic violence or abuse.</a>
+        legal aid and domestic abuse.</a>
     </p>
     <p class="govuk-body govuk-!-margin-bottom-8">
       Find out more about
       <a href="https://www.refuge.org.uk/get-help-now/help-for-women/recognising-abuse/" class="govuk-link" rel="external" target="_blank">
-        domestic violence or abuse</a>
+        domestic abuse</a>
       and
       <a href="https://www.nspcc.org.uk/preventing-abuse/child-abuse-and-neglect/" class="govuk-link" rel="external" target="_blank">child abuse.</a>
     </p>
