--- a/app/views/steps/miam/certification/edit.html.erb
+++ b/app/views/steps/miam/certification/edit.html.erb
@@ -8,6 +8,7 @@
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_collection_radio_buttons :miam_certification, GenericYesNo.values, :value, nil do %>
         <p class="govuk-body"><%=t '.lead_text' %></p>
+        <p class="govuk-body"><%=t '.body_text' %></p>
       <% end %>
 
       <%= f.continue_button %>
