--- a/app/views/steps/miam_exemptions/domestic/edit.html.erb
+++ b/app/views/steps/miam_exemptions/domestic/edit.html.erb
@@ -9,6 +9,7 @@
     <h1 class="govuk-heading-xl"><%=t '.heading' %></h1>
 
     <p class="govuk-body-l"><%= t '.lead_text' %></p>
+    <p class="govuk-body-l"><%= t '.sub_lead_text' %></p>
 
     <%= step_form @form_object, builder: GOVUKDesignSystemFormBuilder::FormBuilder do |f| %>
       <%= f.govuk_check_boxes_fieldset :domestic, legend: { tag: 'span', size: 'm' } do %>
