RST-6378 Change method name to PRLChange

--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -1,6 +1,6 @@
 <% title 'What is required' %>
 
-<% OpeningChange.changes_apply? ? step_header(path: root_path) : step_header(path: Rails.configuration.gds_service_homepage_url) %>
+<% PRLChange.changes_apply? ? step_header(path: root_path) : step_header(path: Rails.configuration.gds_service_homepage_url) %>
 
 <div class="govuk-grid-row app-inverted--card app-inverted-text">
   <div class="govuk-grid-column-full">
@@ -44,7 +44,7 @@
     </div>
 
     <div class="govuk-button-group govuk-!-margin-top-6">
-      <%= link_button 'Continue', OpeningChange.changes_apply? ? edit_steps_opening_consent_order_path : edit_steps_opening_postcode_path , class: 'app-button--l app-button--inverted' %>
+      <%= link_button 'Continue', PRLChange.changes_apply? ? edit_steps_opening_consent_order_path : edit_steps_opening_postcode_path , class: 'app-button--l app-button--inverted' %>
 
       <%= link_to 'Or return to a saved application', new_user_session_path,
                   class: 'govuk-link app-link--inverted ga-pageLink',
