RST-6283 mediation content changes (#1549)
* RST-6283 mediation content changes

* RST-6283 revert unwanted change in c1a

--- a/app/views/steps/opening/start/show.en.html.erb
+++ b/app/views/steps/opening/start/show.en.html.erb
@@ -18,10 +18,7 @@
       <li>solicitor details (if you have asked one to represent you)</li>
       <li>details of any previous family court cases</li>
       <li>signed document confirming <abbr title="Mediation Information and Assessment Meeting">MIAM</abbr> attendance (if applicable)</li>
-      <li>a scan, photo or electronic copy of the document confirming MIAM attendance or mediator’s exemption if you are
-        applying for a child arrangements order, prohibited steps order, specific issue order, or to change or end an
-        existing order (if applicable)
-      </li>
+      <li>a scan, photo or electronic copy of the document confirming MIAM attendance if you are applying for a child arrangements order, prohibited steps order, specific issue order, or to change or end an existing order (if applicable)</li>
       <li>written agreement signed by both parties for the court to formalise if you are applying for a consent order
       </li>
       <li>a scan, photo or electronic copy of your draft consent order if you are applying for a consent order</li>
